speed up gradle build & get rid of spotbugs